--- a/templates/index1.html
+++ b/templates/index1.html
@@ -10,7 +10,7 @@
     <p id="transcription-container"></p>
     <script>
       document.addEventListener("DOMContentLoaded", event => {
-        webSocket = new WebSocket("wss://listeningapi.onrender.com/");
+        webSocket = new WebSocket("wss://https://listeningapi.onrender.com/");
         webSocket.onmessage = function(msg) {
           const data = JSON.parse(msg.data);
           if (data.event === "interim-transcription") {
